--- a/terms.html
+++ b/terms.html
@@ -158,7 +158,7 @@
             <p><strong>Premium Subscription:</strong></p>
             <ul>
                 <li>Unlimited plant tracking</li>
-                <li>AI-powered plant identification & care tips</li>
+                <li>AI-powered plant identification, AI plant diagnosis, & care tips</li>
                 <li>All free features included</li>
             </ul>
 
@@ -242,7 +242,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Wet Your Plants - Plant Journal. All rights reserved.</p>
+        <p>&copy; 2025 Wet Your Plants - Plant Journal. All rights reserved.</p>
         <p><a href="mailto:wetyourplants74@gmail.com" style="color: #558b2f;">wetyourplants74@gmail.com</a></p>
     </footer>
 </body>
