--- a/terms.html
+++ b/terms.html
@@ -29,19 +29,19 @@
             <li class="logo">🌱 Wet Your Plants: Plant Journal</li>
             <li><a href="index.html">Home</a></li>
             <li><a href="privacy.html">Privacy Policy</a></li>
-            <li><a href="terms.html">Terms of Use</a></li>
+            <li><a href="terms.html">Terms of Service</a></li>
         </ul>
     </nav>
 
     <div class="container">
         <div class="legal-content">
-            <h1>Terms of Use</h1>
+            <h1>Terms of Service</h1>
             <p class="last-updated">Last Updated: January 19, 2026</p>
 
             <p>Please read these Terms of Use ("Terms") carefully before using the Plant Journal mobile application ("the App") operated by Wet Your Plants ("we," "our," or "us").</p>
 
             <h2>1. Acceptance of Terms</h2>
-            <p>By downloading, installing, or using the App, you agree to be bound by these Terms and the Standard Apple Licensed Application End User License Agreement (EULA).</p>
+            <p>By downloading, installing, or using the App, you agree to be bound by these Terms and the Standard Apple Licensed Application End User License Agreement (EULA). <a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/">You can review the EULA here.</a></p>
 
             <h2>2. User Accounts and Subscriptions</h2>
             <p><strong>Free Version:</strong></p>
