--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <li class="logo">🌱 Wet Your Plants: Plant Journal</li>
             <li><a href="index.html">Home</a></li>
             <li><a href="privacy.html">Privacy Policy</a></li>
-            <li><a href="terms.html">Terms of Use</a></li>
+            <li><a href="terms.html">Terms of Service</a></li>
         </ul>
     </nav>
 
