--- a/terms.html
+++ b/terms.html
@@ -41,7 +41,7 @@
             <p>Please read these Terms of Use ("Terms") carefully before using the Plant Journal mobile application ("the App") operated by Wet Your Plants ("we," "our," or "us").</p>
 
             <h2>1. Acceptance of Terms</h2>
-            <p>By downloading, installing, or using the App, you agree to be bound by these Terms and the Standard Apple Licensed Application End User License Agreement (EULA). <a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/">You can review the EULA here.</a></p>
+            <p>By downloading, installing, or using the App, you agree to be bound by these Terms. For iOS users, these Terms supplement the Standard Apple Licensed Application End User License Agreement (EULA). For Android users, these Terms constitute the entire agreement between you and Wet Your Plants. <a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/">You can review the EULA here.</a></p>
 
             <h2>2. User Accounts and Subscriptions</h2>
             <p><strong>Free Version:</strong></p>
@@ -68,7 +68,7 @@
             <p>You agree not to attempt to bypass the monthly AI request limit or use the AI features for purposes other than personal plant care. We reserve the right to terminate access for users who attempt to "game" the system.</p>
 
             <h2>5. Disclaimer & Liability</h2>
-            <p>AI identifications and care tips are for informational purposes only. We are not responsible for plant misidentification or care outcomes. You acknowledge that Apple has no obligation to provide maintenance or support for the App.</p>
+            <p>AI identifications and care tips are for informational purposes only. We are not responsible for plant misidentification or care outcomes. You acknowledge that Apple and Google have no obligation to provide maintenance or support for the App.</p>
 
             <h2>6. Contact</h2>
             <p><strong>Email:</strong> <a href="mailto:wetyourplants74@gmail.com">wetyourplants74@gmail.com</a></p>
